--- a/bootstrap-task.html
+++ b/bootstrap-task.html
@@ -12,21 +12,23 @@
 </head>
 
 <body>
+
+
     <!-- 4-->
     <div class="custom-container bg-secondary">
         <div class="row g-0 h-25">
-            <div class="col-5 bg-primary">4</div>
-            <div class="col-2 bg-success"></div>
-            <div class="col-5 bg-warning"></div>
+            <div class="col-5 bg-primary placeholder-wave">4</div>
+            <div class="col-2 bg-success placeholder-wave"></div>
+            <div class="col-5 bg-warning placeholder-wave"></div>
         </div>
         <div class="row g-0 h-50">
             <div class="col-3">
-                <div class="col-6 h-50 w-100 bg-success"></div>
-                <div class="col-6 h-50 w-100 bg-warning"></div>
+                <div class="col-6 placeholder-wave h-50 w-100 bg-success"></div>
+                <div class="col-6 placeholder-wave h-50 w-100 bg-warning"></div>
 
             </div>
             <div class="col-6">
-                <div class="col h-100 bg-danger"></div>
+                <div class="col h-100 placeholder-wave bg-danger"></div>
             </div>
             <div class="col-3">
                 <div class="col-6 h-50 w-100 bg-success"></div>
@@ -98,7 +100,19 @@
 </div>
                   <!-- 6 -->
 
-
+                  
+                  <div class="ltu placeholder-wave">
+                    <div class="row g-0 trystrys">
+                        <div class="col-12 bg-warning "></div>
+                    </div>
+                    <div class="row g-0 trystrys">
+                        <div class="col-12 bg-success"></div>
+                    </div>
+                    <div class="row g-0 trystrys">
+                        <div class="col-12 bg-danger"></div>
+                    </div>
+                </div>
+            
 
 
 </body>
