--- a/contacts.html
+++ b/contacts.html
@@ -16,25 +16,23 @@
     <div class="container">
         <div class="row g-0">
 
-            <div class="col-sm-12 col-md-6 align-self-center  order-sm-2 order-md-1 order-lg-1 order-xl-1 order-xxl-1">
+            <div class="col-sm-12 col-md-6 col-xl-6 col-xxl-6 align-self-center order-sm-2 order-md-1">
                <div class="row g-0">
                 <div class="col">
                     <h1>Find Us</h1>
                 </div>
                </div>
                 <div class="row g-1">
-                    <div class="col-md-6 col-sm-12 h-50 p-1 my-2 shadow-sm">
+                    <div class="col-xl-6 col-md-12 w-sm-100 p-1 my-2 shadow-sm">
                         
                         <div>
-                          
-
                             <h3>Shop 1</h3>
                         </div>
                         <div>Phone: +37060120209</div>
                         <div>Email: <a href="mailto:info@stevia.lt">info@stevia.lt</a></div>
                         <div>Adresas: Rotušės aikštė 1, Kaunas</div>
                     </div>
-                    <div class="col-md-6 col-sm-12 h-50 p-1  my-2 shadow-sm">
+                    <div class="col-xl-6 col-md-12 w-sm-100 p-1 my-2 shadow-sm">
                         <div>
                             <h3>Shop 2</h3>
                         </div>
@@ -43,9 +41,9 @@
                         <div>Adresas: Rotušės aikštė 2, Kaunas</div>
                     </div>
 
-                </div>
-                <div class="row g-1">
-                    <div class="col-md-6 col-sm-12 h-50 p-1  my-2 shadow-sm">
+                <!-- </div>
+                <div class="row g-1"> -->
+                    <div class="col-xl-6 col-md-12 w-sm-100 p-1 my-2 shadow-sm">
                         <div>
                             <h3>Shop 3</h3>
                         </div>
@@ -53,7 +51,7 @@
                         <div>Email: <a href="mailto:info@stevia.lt">info@stevia.lt</a></div>
                         <div>Adresas: Rotušės aikštė 3, Kaunas</div>
                     </div>
-                    <div class="col-md-6 col-sm-12 h-50  my-2 p-1">
+                    <div class="col-xl-6 col-md-12 w-sm-100 p-1 my-2 shadow-sm">
                         <div>
                             <h3>Shop 4</h3>
                         </div>
@@ -65,7 +63,7 @@
             </div>
 
 
-            <div class="col-sm-12 col-md-6 align-self-center order-sm-1 order-md-2 order-lg-2 order-xl-2 order-xxl-2">
+            <div class="col-sm-12 col-md-6 align-self-center order-sm-1">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2294.342132967186!2d23.885785315072887!3d54.896916965141166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e7220ff3184881%3A0x8002872ac9bbdb7c!2sRotu%C5%A1%C4%97s%20a.%201%2C%2044280%20Kaunas!5e0!3m2!1slt!2slt!4v1672683934491!5m2!1slt!2slt"
                     height="450" width="600" style="border:0;" allowfullscreen="" loading="lazy"
